# 42_python_modules

module_00/ex1/: ft_plot_area.py
module_00/ex2/: ft_harvest_total.py
module_00/ex4/: ft_water_reminder.py
module_00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
module_00/ex6/: ft_garden_summary.py
module_00/ex7/: ft_seed_inventory.py
module_01/ex0/: ft_garden_intro.py
module_01/ex1/: ft_garden_data.py
module_01/ex2/: ft_garden_growth.py
module_01/ex3/: ft_plant_factory.py
module_01/ex4/: ft_garden_security.py
module_01/ex5/: ft_plant_types.py
module_01/ex6/: ft_garden_analytics.py
module_02/ex0/: ft_first_exception.py
module_02/ex1/: ft_different_errors.py
module_02/ex2/: ft_custom_errors.py
module_02/ex3/: ft_finally_block.py
module_02/ex4/: ft_raise_errors.py
module_02/ex5/: ft_garden_management.py
module_03/ex0/: ft_command_quest.py
module_03/ex1/: ft_score_analytics.py
module_03/ex2/: ft_coordinate_system.py
module_03/ex3/: ft_achievement_tracker.py
module_03/ex4/: ft_inventory_system.py
module_03/ex5/: ft_data_stream.py
module_03/ex6/: ft_analytics_dashboard.py
module_06/: elements.py  ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_destillation_0.py  ft_destillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
module_07/: battle.py  capacitor.py  tournament.py
module_08/ex2/: .env.example  .gitignore  oracle.py  pyproject.toml
module_09/: requirements.txt
(+43 files in other folders)
